# throughlog

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.example.json  instructions.md  projects.example.json  pyproject.toml
integrations/: README.md  _common.py
integrations/claude_code/: tl_hook.py
integrations/cursor/: tl_hook.py
integrations/js/: tl-report.mjs
scripts/: bootstrap.ps1  bootstrap.sh  make_banner_journal.py
sim/: __init__.py  llm_bench.py  simulator.py
sim/scenarios/: a1_human_agent_split.json  a2_late_out_of_order.json  a3_concurrent_agents.json  a4_overnight_unattended.json  a5_spoofed_diff_report.json  a5_spoofed_folder.json  a6_agent_sdk_hook.json  a7_github_bot_pr.json  a8_bad_clock_offset_persists.json  a9_naive_ts_not_unparseable.json  c2_rapid_switch_debounce.json  c3_reading_vs_afk.json  c6_c7_intent_bridges.json  m1_allowlist_drop.json  m1_clipboard_preview_on.json  m1_clipboard_typed.json  m1_compound_kv_secret.json  m1_diff_capture_on_clean.json  m1_diff_default_off.json  m1_diff_env_tracked_suppressed.json  m1_diff_ignore_glob.json  m1_diff_oversized_binary.json  m1_diff_secret_in_diff.json  m1_secret_redaction.json  m1_short_kv_secret.json  o1_deep_work_cad.json  o2_long_run_afk.json  o3_opaque_exe_attribution.json  o4_cad_churn.json
tests/: main_test.py  test_agent_ingest.py  test_agent_sdk.py  test_appconfig.py  test_ask.py  test_bus.py  test_capture.py  test_categorize.py  test_cli.py  test_config_synthesis.py  test_demo.py  test_deploy.py  test_deploy_crossplatform.py  test_diff_policy.py  test_fs_git.py  test_github_pull.py  test_hooks.py  test_intent_bridge.py  test_intent_ladder.py  test_llm_bench.py  test_local.py  test_nightly.py  test_onboard.py  test_os_focus.py  test_privacy_gate.py  test_proc_monitor.py  test_ratelimit.py  test_relay.py  test_report.py  test_schema.py  test_server.py  test_setup_flow.py  test_sync.py  test_synthesize.py  test_synthesize_batching.py  test_timeline.py  test_verification_findings.py  watcher_test.py
throughlog/: __init__.py  agent_sdk.py  appconfig.py  ask.py  bus.py  capture.py  categorize.py  cli.py  config.py  demo.py  deploy.py  hooks.py  nightly.py  onboard.py  relay.py  report.py  schema.py  server.py  setup_flow.py  sync.py  synthesize.py  timeline.py  tray.py
throughlog/intent/: __init__.py  ladder.py
throughlog/llm/: __init__.py  client.py  local.py  models.json  prompts.py  ratelimit.py
throughlog/privacy/: __init__.py  allowlist.py  diff_policy.py  egress.py  gate.py  redactors.py
throughlog/sources/: __init__.py  agent_ingest.py  base.py  fs_git.py  github_pull.py  intent_bridge.py  os_focus.py  proc_monitor.py
