[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "throughlog"
version = "2.0.0"
description = "A private, local work journal that records your day — and what your AI agents did — as per-project journals and an executive summary."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Naor Zadok" }]
keywords = ["work-journal", "developer-journal", "ai-agents", "privacy", "local-first", "llm"]

# The core pipeline (schema, privacy gate, timeline, categorize, synthesize, the
# LLM client, and the simulator) is pure standard library — no runtime deps.
dependencies = []

[project.optional-dependencies]
# Live OS capture adapters lazily import these; they are NOT needed to run the
# analysis pipeline (categorize + synthesize) over already-captured events.
capture = [
    "psutil",
    "watchdog",
    "uiautomation",
    "keyboard",
    "pyperclip",
    "pystray",
    "Pillow",
]

# Fully-local, in-machine inference — a self-contained alternative to a cloud key.
# `llama-cpp-python[server]` runs a GGUF model behind its own OpenAI-compatible server
# (the `[server]` extra pulls uvicorn/fastapi/etc. that `python -m llama_cpp.server` needs);
# `huggingface-hub` fetches the chosen GGUF on demand. Imported ONLY by the local driver
# (throughlog/llm/local.py), never by the pure-stdlib pipeline. See `tl local`.
# On a machine with no C/C++ compiler (e.g. stock Windows), install a prebuilt wheel:
#   pip install -e ".[local]" --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
local = [
    "llama-cpp-python[server]",
    "huggingface-hub",
]

[project.scripts]
tl = "throughlog.cli:main"

[tool.setuptools]
packages = ["throughlog", "throughlog.privacy", "throughlog.sources", "throughlog.intent", "throughlog.llm", "sim"]

[tool.setuptools.package-data]
# Ship the curated local-model registry as data alongside the package.
throughlog = ["llm/models.json"]
